--- a/week 02/holygrail.html
+++ b/week 02/holygrail.html
@@ -26,7 +26,7 @@
                         </section>
                     </main>
                     <aside>
-                        <img src="https://www.churchofjesuschrist.org/temples/photo-gallery?lang=por" width="200">
+                    <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/800x500/aba-nigeria-temple-lds-248708-high-res-print.jpg" alt="Aba Niger Temple" width="200">
                     </aside>
                     <footer>
                         <p>Renan Conceição Monte</p>
