Adding city part

--- a/week 01/index.html
+++ b/week 01/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<<html lang="eg-US">
-<head>
-        
+<html lang="en-US">
+<head> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Renan de Jesus Conceição Monte | WDD 130 </title>
+    <meta name="description" content="Renan de Jesus Conceição Monte's personal page for WDD 130">
+    <meta name="author" content="Renan de Jesus Conceição Monte">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>
+            <a href="#">Home</a> <p></p>
             <a href="wwr/">Rafting Website</a>
         </nav>
     </header>
@@ -24,6 +25,12 @@
         <p>I have a great desire to learn how to program, learn more about the world of technology,</p>
         <p>and work with that one day. </p>    
     </main>
+    <aside>
+        <h2>São Paulo</h2>
+        <img src="images/city.jpg" alt="Renan's photo" width="200">
+        <p>São Paulo is the largest city in Brazil and one of the most populous cities in the world.</p>
+        <p>It is known for its cultural diversity, vibrant arts scene, and economic significance</p>
+    </aside>
     <footer>
          <p>©2025 〰 Renan de Jesus Conceição Monte 〰 São Paulo, Brazil</p>
     </footer>
