Corrigindo alguns erros

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en-US">
+<!doctype html> <!--This is a comment-->
+<HTML lang="en-US">
 <head> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,5 +36,5 @@
     </footer>
 
     </body>  
-</html>
+</HTML>
 
