--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!doctype html> <!--This is a comment-->
-<HTML lang="en-US">
+<!DOCTYPE html> <!--This is a comment-->
+<html lang="en-US">
 <head> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,5 +36,5 @@
     </footer>
 
     </body>  
-</HTML>
+</html>
 
