--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
     <header>
         <nav>
-            <a href="#">Home</a> <p></p>
+            <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
         </nav>
     </header>
     <main>
         <h1>Renan de Jesus Conceição Monte | WDD 130</h1>
         <img src="images/profile.jpg" alt="Renan" width="200" >
-        <p>Hello! I'm Renan, I'm 25 years old, and from São Paulo, Brazil.</p>
-        <p>I have a great family, me my wife and my 1 year's baby, I really enjoy</p>
-        <P>to go out with my family and friends, practice sports and listen to music,</p>
-        <p>I work as a Virtual Administrative Assistant for a company in California,</p>
-        <p>I have a great desire to learn how to program, learn more about the world of technology,</p>
-        <p>and work with that one day. </p>    
+        <p>
+  Hello! I'm Renan, I'm 25 years old, and from São Paulo, Brazil. I have a great family me, my wife and our 1-year-old baby. I really enjoy going out with my family and friends, practicing sports, and listening to music.
+</p>
+<p>
+  I work as a Customer Support Representative for a company in California. I have a great desire to learn how to program, explore the world of technology, and hopefully work in that field one day.
+</p>   
     </main>
     <aside>
         <h2>São Paulo</h2>
