--- a/week 02/temple.html
+++ b/week 02/temple.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Renan de Jesus Conceição Monte | Holy Grail Layout Example</title>
-        <link rel="stylesheet" href="styles/temple.css"
+        <link rel="stylesheet" href="styles/temple.css">
         <meta author="Renan de Jesus Conceição Monte">
     </head>
 
