--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="#">Home</a>
+        <nav>   
+            <a href="#">Home</a> <br>
             <a href="wwr/">Rafting Website</a>
         </nav>
     </header>
